# adversarial-embeddings

./: pyproject.toml
adversarial_embeddings/: data.py  model.py  train.py
