[tool.poetry]
name = "adversarial-embeddings"
version = "0.1.0"
description = ""
authors = ["Pranav Teegavarapu <pranavnt@outlook.com>"]
readme = "README.md"
packages = [{include = "adversarial_embeddings"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
