[tool.poetry]
name = "adversarial-embeddings"
version = "0.1.0"
description = ""
authors = ["Pranav Teegavarapu <pranavnt@outlook.com>"]
readme = "README.md"
packages = [{include = "adversarial_embeddings"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.1"
numpy = "^1.26.4"
transformers = "^4.38.2"
safetensors = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
